#443 #444
1. fix tomcat jar scanner过程中抛出的FileNotFoundException.
2. fix重调用链请求过程中返回码为204时,response中entity可能为空造成的NPE问题